# Goonware

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.claude/skills/: browser
.github/workflows/: ci.yml  release.yml
scripts/: download-rg.sh
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: gli-claude-hook.sh  goonware-claude-hook.sh  goonware-codex-hook.sh  goonware-gemini-hook.sh
src-tauri/resources/skills/browser/: SKILL.md
src-tauri/src/: agent_hooks.rs  block_id.rs  claude_usage.rs  connections.rs  flat_storage.rs  flat_term.rs  fs.rs  git.rs  helper_agent.rs  lib.rs  main.rs  pr.rs  skills.rs  state.rs  term.rs  warp_term.rs  worktree.rs
src-tauri/src/browser/: binary.rs  chrome.rs  daemon.rs  mod.rs
src-tauri/src/persistence/: db.rs  migrations.rs  mod.rs  writer.rs
src/browser/: BrowserPane.tsx
src/design/: cm6-theme.ts  codicons.tsx  icons.ts  icons.tsx  motion.css  motion.ts  picker-icons.ts  tokens.css
src/editor/: AskCard.tsx  MarkdownView.tsx
src/files/: FileTree.tsx  FileTypeIcon.tsx
src/git/: AllChangesView.tsx  Avatar.tsx  CommitDetailView.tsx  DiffAsk.tsx  DiffFix.test.ts  DiffFix.tsx  DiffView.tsx  HistoryView.tsx  PrDiffView.tsx  PrsView.tsx  conflictAgent.ts  diff-highlight.test.tsx  diff-highlight.tsx  diff-parse.test.ts  diff-parse.ts  history-graph.test.ts  history-graph.ts
src/hooks/: useGitStatus.ts  useKeyboardShortcuts.ts  useOpenUrlInBrowser.ts  useVisibleTerminalSet.ts
src/lib/: claudeUsage.test.ts  claudeUsage.ts  coalesceFrame.test.ts  coalesceFrame.ts  dragPoint.test.ts  dragPoint.ts  fs.ts  git.ts  persistence.ts  pointerDrag.tsx  pr.ts  projectDialog.ts  shellQuote.ts  urlMatch.test.ts  urlMatch.ts  worktrees.ts
src/lib/tauri/: term.test.ts  term.ts
src/palette/: SearchOverlay.tsx
src/primitives/: Icon.tsx  Loader.tsx
src/shell/: AppShell.tsx  CreateWorktreeDialog.tsx  ErrorBoundary.tsx  IconPickerDialog.tsx  MainColumn.tsx  RepositorySettingsView.tsx  RightPanel.tsx  SettingsView.tsx  Sidebar.tsx  UpdaterToast.tsx  WindowChrome.tsx  filesViewScroll.test.tsx  paneSlotLayout.test.ts  paneSlotLayout.ts
src/skills/: SkillsView.tsx
src/state/: AppState.tsx  agentActivityStore.test.ts  agentActivityStore.ts  gitStatusStore.ts  reducer.test.ts  reducer.ts  types.test.ts  types.ts
src/terminal/: AgentChrome.tsx  Block.tsx  BlockList.tsx  BlockTerminal.tsx  CanvasGrid.tsx  CellRow.tsx  LiveBlock.tsx  PromptInput.tsx  PtyPassthrough.tsx  TerminalStatusBar.tsx  WarpSurfaceTracker.tsx  agentCommand.test.ts  agentCommand.ts  agentScrollLayout.test.ts  agentScrollLayout.ts  agentVisibilityFlush.test.ts  blockLogic.test.ts  blockLogic.ts  blockStyles.ts  canvasGridEscalation.test.ts  canvasGridEscalation.ts  clipboardPasteFlow.test.ts  clipboardRead.test.ts  clipboardRead.ts  clipboardWrite.test.ts  clipboardWrite.ts  ctrlCEscalation.test.ts  ctrlCEscalation.ts  inputModeDecision.test.ts  inputModeDecision.ts  keyEncoding.test.ts  keyEncoding.ts  liveRowTrim.test.ts  liveRowTrim.ts  nativeWheelBridge.test.ts  nativeWheelBridge.ts  parseAnsi.ts  selectionCoordinates.test.ts  sessionMemory.ts  softReset.test.ts  (+8 more)
src/terminal/gpu/: GridRenderer.ts  gridRendererRecovery.test.ts  visibilityRestore.test.ts  visibilityRestore.ts
src/todo/: TodoView.tsx
