[package]
name = "goonware"
version = "0.0.1"
description = "A confident dark instrument for running CLI coding agents."
authors = ["raeedz"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "goonware_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
alacritty_terminal = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4"] }

# Browser daemon: in-house replacement for gstack's localhost:4000 service.
# Spawns a headless Chrome and exposes /health, /status, /screenshot,
# /console/recent, /navigate, /click, /type, /key over HTTP so RLI's own
# BrowserPane *and* a `claude` running in any RLI terminal pane can
# drive the same browser session via the same contract.
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
dirs = "5"
libc = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"

# Persistence: Warp-style SQLite layer for app state. `bundled` ships
# the SQLite C library inside the binary so we don't depend on the
# system's sqlite version — matches what Warp does (their forked
# diesel_cli also bundles SQLite). Single writer thread + WAL mode
# + embedded migrations live in src/persistence/.
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Native terminal migration (M0+): Warp's GPU UI kit (`warpui`), used to
# render the terminal into a Metal NSView embedded in the Tauri window.
# `warpui`/`warpui_core` are MIT but pull in AGPL `warp_*` crates, so
# Goonware is AGPL as a result (accepted by maintainer). Vendored via a
# local path during the spike — TODO before shipping: switch to an
# in-repo vendored copy or a pinned fork for reproducible/downloadable builds.
warpui = { path = "/Users/raeedz/Developer/warp-reference/crates/warpui" }
# PNG encoding for the dev-only native-surface frame capture (lets us verify
# the warpui render off-screen). Matches warpui's image version to dedupe.
image = "0.25"

[dev-dependencies]
tempfile = "3"

# Profile tweaks for release builds — small + fast binary.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"

# warpui pulls Warp's forked graphics/text stack, which requires these
# low-level crates unified to a single source — otherwise the `font-kit`
# fork and `core-text` disagree on `core-graphics` types (E0308). These
# mirror Warp's root Cargo.toml `[patch]` so warpui resolves identically.
# (If Tauri's own mac bindings conflict with these revs, revisit the
# integration approach — e.g. a unified workspace.)
[patch.crates-io]
core-foundation = { git = "https://github.com/servo/core-foundation-rs", rev = "6f844cf1a1a18e25b70fcdf1bcdc458555bd2eff" }
core-foundation-sys = { git = "https://github.com/servo/core-foundation-rs", rev = "6f844cf1a1a18e25b70fcdf1bcdc458555bd2eff" }
core-graphics = { git = "https://github.com/servo/core-foundation-rs", rev = "6f844cf1a1a18e25b70fcdf1bcdc458555bd2eff" }
core-text = { git = "https://github.com/servo/core-foundation-rs", rev = "6f844cf1a1a18e25b70fcdf1bcdc458555bd2eff" }
objc = { git = "https://github.com/warpdotdev/rust-objc.git", rev = "5b656827fa9f863ef0eb22e444a3fedac009e78a" }
pathfinder_simd = { git = "https://github.com/warpdotdev/pathfinder.git", rev = "34128a129ca6aee168fbc5060a4f21b4f7e486a9" }
